--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu:20.04, ubuntu:22.04, ubuntu:24.04, debian:11, debian:12, oraclelinux:8, oraclelinux:9]
+        os: ['ubuntu:20.04', 'ubuntu:22.04', 'ubuntu:24.04', 'debian:11', 'debian:12', 'oraclelinux:8', 'oraclelinux:9']
 
     steps:
       - name: Checkout repository
@@ -28,22 +28,22 @@ jobs:
             ${{ matrix.os }} bash -c "
               # Install necessary dependencies based on OS
               case '${{ matrix.os }}' in
-                ubuntu:20.04|ubuntu:22.04|ubuntu:24.04)
+                'ubuntu:20.04'|'ubuntu:22.04'|'ubuntu:24.04')
                   apt-get update
                   apt-get install -y sudo wget gnupg2 lsb-release
                   ;;
-                debian:11|debian:12)
+                'debian:11'|'debian:12')
                   apt-get update
                   apt-get install -y sudo wget gnupg2 lsb-release
                   ;;
-                oraclelinux:8|oraclelinux:9)
+                'oraclelinux:8'|'oraclelinux:9')
                   yum install -y sudo wget gnupg2
                   ;;
               esac
 
               # Make the script executable
-              chmod +x ./your-script.sh
+              chmod +x ./test_ta.sh
 
               # Run the script
-              sudo ./your-script.sh
+              sudo ./test_ta.sh
             "
