--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: ['ubuntu:20.04', 'ubuntu:22.04', 'ubuntu:24.04', 'debian:11', 'debian:12', 'oraclelinux:8', 'oraclelinux:9']
+        os: ['ubuntu:focal', 'ubuntu:jammy', 'ubuntu:noble', 'debian:bullseye', 'debian:bookworm', 'oraclelinux:8', 'oraclelinux:9']
 
     steps:
       - name: Checkout repository
@@ -28,11 +28,11 @@ jobs:
             ${{ matrix.os }} bash -c "
               # Install necessary dependencies based on OS
               case '${{ matrix.os }}' in
-                'ubuntu:20.04'|'ubuntu:22.04'|'ubuntu:24.04')
+                'ubuntu:focal'|'ubuntu:jammy'|'ubuntu:noble')
                   apt-get update
                   apt-get install -y sudo wget gnupg2 lsb-release
                   ;;
-                'debian:11'|'debian:12')
+                'debian:bookworm'|'debian:bullseye')
                   apt-get update
                   apt-get install -y sudo wget gnupg2 lsb-release
                   ;;
